tests/snapshots/examples_fixtures/type_system__failing__41_effect_alias_now_ms_in_io_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `n` requires effect `Time` in this function signature.

  examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx:5:5
  |
5 |     n()
  |     ^
  |     - effectful call occurs here

Hint:
  Add `with Time` to the enclosing function.
== stdout ==
<not executed>
